# resume-scanner

./: .gitignore  .replit  App.tsx  design_guidelines.md  package-lock.json  package.json  replit.md
backend/: SETUP_INSTRUCTIONS.md  main.py  pyproject.toml  setup_database.sql
backend/app/: config.py  database.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: resume.py
backend/app/routers/: resumes.py
backend/app/utils/: embeddings.py  pdf.py
components/: ErrorFallback.tsx  SkillChip.tsx
data/: mockData.ts
frontend/: App.tsx  app.config.ts  app.json  package.json
frontend/components/: JobCard.tsx  MatchScoreBadge.tsx  ThemedText.tsx
frontend/constants/: theme.ts
frontend/contexts/: AuthContext.tsx
frontend/hooks/: useSafeBottomTabBarHeight.ts  useScreenInsets.ts
frontend/navigation/: AuthStackNavigator.tsx  MainTabNavigator.tsx  ProfileStackNavigator.tsx
frontend/screens/: JobDetailScreen.tsx  JobResultsScreen.tsx  LoginScreen.tsx  RegisterScreen.tsx  ResumesScreen.tsx  SearchScreen.tsx  SettingsScreen.tsx
frontend/utils/: api.ts  supabaseClient.ts
navigation/: MyJobsStackNavigator.tsx  SearchStackNavigator.tsx
screens/: MyJobsScreen.tsx  ProfileScreen.tsx  ResumesScreen.tsx
types/: job.ts
